GNOME Bugzilla – Bug 614879
Can't launch Wine apps
Last modified: 2010-10-11 14:42:11 UTC
I'm unable to start Wine apps for a few days (not sure a commit broke this recently). On right click, I can only choose "Add to favorites", and left click has no effect, both from search and apps list. JS ERROR: !!! Exception was: Error: Error invoking Shell.launch: Not found JS ERROR: !!! lineNumber = '0' JS ERROR: !!! fileName = 'gjs_throw' JS ERROR: !!! message = 'Error invoking Shell.launch: Not found' JS ERROR: !!! stack = 'Error("Error invoking Shell.launch: Not found")@:0 ("Error invoking Shell.launch: Not found")@gjs_throw:0 @:0 ("wine-Programmes-SAS-SAS 9.1 (Fran\xE7ais).desktop")@/opt/gnome-shell/share/gnome-shell/js/ui/appDisplay.js:295 ()@/opt/gnome-shell/share/gnome-shell/js/ui/appDisplay.js:263 ()@/opt/gnome-shell/share/gnome-shell/js/ui/dash.js:605 ([object _private_St_IMText])@/opt/gnome-shell/share/gnome-shell/js/ui/dash.js:849 ([object _private_St_IMText])@/opt/gnome-shell/share/gjs-1.0/lang.js:110 Error("Chained exception")@:0 ("Chained exception")@gjs_throw:0
I could have been more explicit: Wine .desktop files are in ~/.config/Wine/Programmes/XXX.desktop. So maybe the problem is with subdirectories (in the message, slashes are replaced with dashes).
I can confirm this bug also occurs on my box. I can't recall the exact revision it started on, but it was around the end of March/beginning of April.
Created attachment 163387 [details] [review] [ShellAppSystem] Don't use g_desktop_app_info_new wine desktop files located at ~/.local/share/applications/wine/Programs/.../XXX.desktop. g_desktop_app_info_new doesn't fully support convert id to path. For example: multiply subdirs (our case), "LegacyDir prefix" in .menu files...
Review of attachment 163387 [details] [review]: ::: src/shell-app-system.c @@ +1306,2 @@ return TRUE; } I'd prefer to see this call: filename = gmenu_tree_entry_get_desktop_file_path (info->entry); gapp = g_desktop_app_info_new_from_filename (filename);
Created attachment 165134 [details] [review] [ShellAppSystem] Don't use g_desktop_app_info_new
Review of attachment 165134 [details] [review]: Looks OK, but can you add a comment /* Can't use g_desktop_app_info_new, see bug 614879 */ We'll have to keep this kind of thing in mind when we eventually switch away from gnome-menus.